testsuite/tests/ghc-e/should_fail/T24172.hs
main = print $ 1 + Bool
